# data-generators

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yaml  ci.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  publish.yml  pypi-publish,yml
data_generators/contacts/: contact.py  email.py  gen_contacts.py  gen_vcards.py  phone_number.py
tests/: addres_test.py  contact_test.py  email_test.py  gen_contacts_test.py  gen_vcards_test.py  phone_number_test.py
vcf_generator/: __init__.py  __main__.py  address.py  contact.py  email.py  gen_contacts.py  gen_vcards.py  phone_number.py
