[tool.poetry]
name = "data-generators"
version = "0.1.0"
description = ""
authors = ["Bryan Wodi <12839540+talk2bryan@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fire = "^0.6.0"
faker = "^24.4.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"

[tool.pytest]
filterwarnings = ["ignore::DeprecationWarning"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
