[tool.poetry]
name = "vcf-generator"
version = "1.1.0"
description = "A simple VCF generator. Generate VCF files with random data."
authors = ["Bryan Wodi <pypi.envy443@dralias.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/talk2bryan/vcf-generator"
keywords = ["vcf", "generator", "vcard", "contacts", "faker", "python"]
include = [
    { path =  "tests", format = "sdist" }
]

[tool.poetry.scripts]
vcf-generator = "vcf_generator.__main__:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/talk2bryan/vcf-generator/issues"


[tool.poetry.dependencies]
python = "^3.10"
fire = "^0.6.0"
faker = "^24.4.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
